Upgraded some deprecated code